# PointBlank

./: ARCHITECTURE_SUMMARY.md  CMakeLists.txt  DOCUMENTATION.md  EXTERNAL_BAR_INTEGRATION.md  GRAMMAR.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  extensions.md  pointblank.wmi
contrib/: README.md  ls  pointblank.desktop  xinitrc
extension_template/: ExampleExtension.cpp
include/pointblank/config/: ConfigParser.hpp  ConfigParserV2.hpp  ConfigWatcher.hpp  LayoutConfigParser.hpp  StartupApps.hpp
include/pointblank/core/: SessionManager.hpp  Toaster.hpp  WindowManager.hpp  XServerManager.hpp
include/pointblank/display/: EWMHManager.hpp  MonitorManager.hpp  SyncManager.hpp
include/pointblank/extensions/: ExtensionAPI.hpp  ExtensionLoader.hpp  PluginManager.hpp
include/pointblank/ipc/: IPCServer.hpp
include/pointblank/layout/: FractalLayoutProvider.hpp  LayoutEngine.hpp  LayoutProvider.hpp  LayoutTypes.hpp
include/pointblank/performance/: LockFreeStructures.hpp  PerformanceTuner.hpp  RenderPipeline.hpp
include/pointblank/utils/: Camera.hpp  GapConfig.hpp  SpatialGrid.hpp
include/pointblank/window/: FloatingWindowManager.hpp  KeybindManager.hpp  PreselectionWindow.hpp  ScratchpadManager.hpp  SizeConstraints.hpp  WindowSwallower.hpp
src/: main.cpp
src/config/: ConfigParser.cpp  ConfigWatcher.cpp  LayoutConfigParser.cpp  StartupApps.cpp
src/core/: SessionManager.cpp  Toaster.cpp  WindowManager.cpp  XServerManager.cpp
src/display/: EWMHManager.cpp  MonitorManager.cpp  SyncManager.cpp
src/extensions/: ExtensionLoader.cpp  PluginManager.cpp
src/ipc/: IPCServer.cpp
src/layout/: LayoutEngine.cpp  LayoutProvider.cpp
src/performance/: PerformanceTuner.cpp  RenderPipeline.cpp
src/utils/: GapConfig.cpp  SpatialGrid.cpp
src/window/: FloatingWindowManager.cpp  KeybindManager.cpp  PreselectionWindow.cpp  ScratchpadManager.cpp  SizeConstraints.cpp  WindowSwallower.cpp
text/: ARCHITECTURE_SUMMARY.md  DOCUMENTATION.md  EXTERNAL_BAR_INTEGRATION.md  GRAMMAR.md  IMPLEMENTATION_GUIDE.md  extensions.md
